
    2025/02/06 - Components y Screen - Valentina Rincón
    Cambios:
        - Creado componente DefaultFormMedium en \Form\DefaultFormMedium.tsx
        - Creado componente DefaultFormNormal en \Form\DefaultFormNormal.tsx
        - Creado archivo de barril para exportar los componentes Form en \index.ts 
        - Modificados componentes (Input.tsx, InputBorder.tsx, InputDefault.tsx, InputLine) para darle soporte en la personalizacion de icons. 
        - Renombrado componente Form a DefaultForm en \Form\DefaultForm.tsx
    Observaciones: Se continuara trabajando en el componente form

     2025/02/07 - Components y Screen - Valentina Rincón
    Cambios:
       - Creado componente Date.tsx
    Observaciones:

    2025/02/17 - Components y Screen - Valentina Rincón
    Cambios:
       - Creado componente Checkbox en \checkbox
       - Creada carpeta checkbox en \atoms
       - Creado archivo CheckboxComponent en \checkbox
       - Creado archivo CheckboxComponent en \checkbox
       - Crear componentes checbox group dentro de CheckboxComponent para permitir el uso entre variantes.
       -Dar soporte de personalizacion de estilos a los componentes.
    Observaciones:

    2025/02/18 - Components y Screen - Valentina Rincón
    Cambios:
       - Creado componente CheckboxGroup en \checkbox
       - Crear demás componentes checkbox  dentro de CheckboxComponent.tsx
       - Añadidas propiedades al componente base para hacerlo más dinamico en Checkbox.tsx
       - Añadida exportacion del componente CheckboxComponent en index.ts
    Observaciones:

    2025/02/19 - Components y Screen - Valentina Rincón
    Cambios:
       - Modificado componente para estilizar checbox y checked en Checkbox.tsx
       - Modificado  componente para agregarle el estado al checked en CheckboxComponent.tsx
       - Crear demás componentes checkbox  dentro de CheckboxComponent.tsx 
       - Renderizados componentes de CheckboxComponent en \screen\home.tsx
    Observaciones: